--- a/style.css
+++ b/style.css
@@ -26,3 +26,25 @@
 	padding: 20px;
 	width: 70%;
 }
+
+.footer{
+	background-color: #336699;
+	color: white;
+}
+
+.bilder{
+
+}
+
+.karrusell{
+	width: 50%;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	border: grey 2px solid;
+	background-color: lightgrey;
+	padding-top: 30px;
+	padding-bottom: 30px;
+	padding-left: 40px;
+	padding-right: 40px;
+}
